// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IFrame Editor Node IFrame component 1`] = `
<div>
  <div
    className="obojobo-draft--chunks--iframe viewer pad is-previewing  is-not-bordered is-not-showing  is-controls-enabled  is-not-missing-src is-not-scaled-up"
  >
    <div
      className="editor-container   is-not-selected"
      onClick={[Function]}
      style={
        Object {
          "height": "200px",
          "userSelect": "none",
        }
      }
    >
      <div
        className="obojobo-draft--components--button is-not-dangerous align-center delete-button"
        contentEditable={false}
      >
        <button
          className="button"
          contentEditable={false}
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={-1}
          type="button"
        >
          ×
        </button>
      </div>
      <div
        className="iframe-toolbar"
      >
        <span
          aria-hidden={true}
          className="title"
          contentEditable={false}
        >
          mockTitle
        </span>
        <div
          className="obojobo-draft--components--button is-not-dangerous align-center properties-button"
          contentEditable={false}
        >
          <button
            className="button"
            contentEditable={false}
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={-1}
            type="button"
          >
            IFrame Properties
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`IFrame Editor Node IFrame component handles tab 1`] = `"<div><div class=\\"obojobo-draft--chunks--iframe viewer pad is-previewing  is-not-bordered is-not-showing  is-controls-enabled  is-missing-src is-not-scaled-up\\"><div class=\\"editor-container   is-not-selected\\" style=\\"height: 500px; user-select: none;\\"><div class=\\"obojobo-draft--components--button is-not-dangerous align-center delete-button\\"><button type=\\"button\\" class=\\"button\\" tabindex=\\"-1\\" contenteditable=\\"false\\">×</button></div><div class=\\"iframe-toolbar\\"><span class=\\"title\\" aria-hidden=\\"true\\" contenteditable=\\"false\\">IFrame missing src attribute</span><div class=\\"obojobo-draft--components--button is-not-dangerous align-center properties-button\\"><button type=\\"button\\" class=\\"button\\" tabindex=\\"-1\\" contenteditable=\\"false\\">IFrame Properties</button></div></div></div></div></div>"`;

exports[`IFrame Editor Node IFrame renders with no size correctly 1`] = `
<div>
  <div
    className="obojobo-draft--chunks--iframe viewer pad is-previewing  is-not-bordered is-not-showing  is-controls-enabled  is-not-missing-src is-not-scaled-up"
  >
    <div
      className="editor-container   is-selected"
      onClick={[Function]}
      style={
        Object {
          "height": "500px",
          "userSelect": "none",
        }
      }
    >
      <div
        className="obojobo-draft--components--button is-not-dangerous align-center delete-button"
        contentEditable={false}
      >
        <button
          className="button"
          contentEditable={false}
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
          type="button"
        >
          ×
        </button>
      </div>
      <div
        className="iframe-toolbar"
      >
        <span
          aria-hidden={true}
          className="title"
          contentEditable={false}
        >
          mockSrc
        </span>
        <div
          className="obojobo-draft--components--button is-not-dangerous align-center properties-button"
          contentEditable={false}
        >
          <button
            className="button"
            contentEditable={false}
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
            type="button"
          >
            IFrame Properties
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
